# cABBA

./: ABBA  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  benchmark_test.csv  cmake_install.cmake  licence  performance.csv  runtest  runtest.cpp
.github/workflows/: c-cpp.yml
include/: ABBA.h  compress.h  csvReader.h  digitization.h  dtw.h  gents.h  globalFunc.h  operatorLoader.h
src/: ABBA.cpp  compress.cpp  digitization.cpp  global_func.cpp  operator_loader.cpp
test/: functionTest.cpp  gents.cpp  parameters_test.cpp  performance.csv  sorting_test.cpp
